# src/app/modules/rdg/models/cita.ts
@@ -11,19 +11,16 @@ export class Cita {
     version:String;
   
     constructor(cita){
-      {
-        if(cita){
-          this.para = cita.para || "";
-          this.cc = cita.cc || "";
-          this.cco = cita.cco || "";
-          this.exclusivos = cita.exclusivos || '';
-          this.usuario = cita.usuario || '';
-          this.asunto = cita.asunto || '';
-          this.mensajeHtml = cita.mensajeHtml || '';
-          this.idInstancia = cita.idInstancia || '';
-          this.fecha = cita.fecha || '';
-          this.version = cita.version || '';
-        }
-      }
+      this.para = cita.para || "";
+      this.cc = cita.cc || "";
+      this.cco = cita.cco || "";
+      this.exclusivos = cita.exclusivos || '';
+      this.usuario = cita.usuario || '';
+      this.asunto = cita.asunto || '';
+      this.mensajeHtml = cita.mensajeHtml || '';
+      this.idInstancia = cita.idInstancia || '';
+      this.fecha = cita.fecha || '';
+      this.version = cita.version || '';
     }
+    
   }
